Applied JavaFX Gradle Plugin and removed JMODs