@@ -3,7 +3,10 @@
  */
 import org.apache.tools.ant.filters.*
 
-apply plugin: 'application'
+plugins {
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.7'
+}
 
 mainClassName = "io.github.santulator.gui.main.SantulatorGuiExecutable"
 
@@ -52,13 +55,12 @@ dependencies {
 
     testRuntime 'commons-io:commons-io:2.6'
     testRuntime 'org.testfx:openjfx-monocle:jdk-11+26'
+}
 
-    javafxCompile "org.openjfx:javafx-base:11.0.2:${platform}"
-    javafxCompile "org.openjfx:javafx-graphics:11.0.2:${platform}"
-    javafxCompile "org.openjfx:javafx-controls:11.0.2:${platform}"
-    javafxCompile "org.openjfx:javafx-fxml:11.0.2:${platform}"
-
-    compile configurations.javafxCompile
+javafx {
+    modules = [
+        'javafx.controls', 'javafx.fxml'
+    ]
 }
 
 test {
@@ -72,19 +74,19 @@ test {
 
 run {
     jvmArgs += [
-        '--module-path', classpath.asPath,
-        '--add-modules', 'javafx.controls',
-        '--add-opens', 'java.base/java.lang=com.google.guice',
-        '--add-exports', 'javafx.base/com.sun.javafx.runtime=controlsfx',
-        '--add-exports', 'javafx.graphics/com.sun.javafx.css=controlsfx',
-        '--add-exports', 'javafx.base/com.sun.javafx.reflect=ALL-UNNAMED',
-        '--add-exports', 'javafx.base/com.sun.javafx.beans=ALL-UNNAMED',
-        '--add-exports', 'javafx.graphics/com.sun.javafx.util=ALL-UNNAMED'
+        '--add-exports', 'javafx.base/com.sun.javafx.runtime=ALL-UNNAMED',
+        '--add-exports', 'javafx.graphics/com.sun.javafx.css=ALL-UNNAMED'
     ]
 }
 
 task copyDependencies(type: Copy) {
-    from configurations.runtime - configurations.javafxCompile
+    from configurations.runtime
     from jar
     into "${buildDir}/libraries"
+}
+
+task copyJavafxModules(type: Copy) {
+    from configurations.runtimeClasspath
+    include "javafx*${javafx.platform.classifier}.jar"
+    into "${buildDir}/javafx-modules"
 }
